--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,6 +26,7 @@
         <a href="{{speaker.linkedin}}">LINKEDin_link</a>
     </div>
     {% endfor %}
+<p>testesatasetasetasetaewt</p>
 </div>
 </body>
 </html>
