--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,6 @@
     <link href="{% static "home/css/style.css" %}" rel="stylesheet">
 </head>
 <body>
-<div>
     {% for post in news %}
         {% if post.is_hidden %}
             <h1>{{post.title}}</h1>
@@ -17,16 +16,36 @@
         {% endif %}
     {% endfor %}
 
-    {% for speaker in speakers %}
-    <div>
-        <h1>{{speaker.name}}</h1>
-        <h2>{{speaker.description}}</h2>
-        <img src="{{speaker.image.url}}" alt="{{speaker.alt}}">
-        <a href="{{speaker.fb}}">FB_link</a>
-        <a href="{{speaker.linkedin}}">LINKEDin_link</a>
-    </div>
-    {% endfor %}
-<p>testesatasetasetasetaewt</p>
-</div>
+    <section class="speakers" id="speakers">
+        <div class="container">
+            <h2 class="section-title">Спікери</h2>
+            <div class="speakers-cards">
+                    {% for speaker in speakers %}
+                <div class="speakers-cards__item">
+                    <div class="speakers-cards__body">
+                        <img class="speakers-cards__img" src="{{speaker.image.url}}" alt="{{speaker.alt}}" />
+                        <h3 class="speakers-cards__title center">{{speaker.name}}</h3>
+                        <p class="speakers-cards__text">{{speaker.description}}</p>
+                        <div class="speakers-cards__footer center">
+                            <a class="speakers-social" href="{{speaker.fb}}"><img src="../../static/home/img/facebook.svg" alt="Іконка фейсбуку з посиланням на сторінку"></a>
+                            <a class="speakers-social" href="{{speaker.fb}}"><img src="../../static/home/img/linkedin.svg" alt="Іконка лінкедину з посиланням на сторінку"></a>
+                        </div>
+                    </div>
+                </div>
+                    {% endfor %}
+            </div>
+        </div>
+    </section>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+<script src="../../static/home/js/app.js"></script>
 </body>
 </html>
