container for section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,8 @@
         {% endif %}
     {% endfor %}
 
-    <section class="speakers" id="speakers">
+    <main>
+        <section class="speakers" id="speakers">
         <div class="container">
             <h2 class="section-title">Спікери</h2>
             <div class="speakers-cards">
@@ -36,6 +37,7 @@
             </div>
         </div>
     </section>
+    </main>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
