--- a/inclusive/home/static/home/css/style.css
+++ b/inclusive/home/static/home/css/style.css
@@ -5,6 +5,17 @@
 }
 
 @font-face {
+  font-family: 'e-UkraineHead';
+  src: url('../fonts/e-Ukraine_font/web/e-UkraineHead-Regular.ttf') format('ttf'),
+    url('../fonts/e-Ukraine_font/web/e-UkraineHead-Regular.eot') format('eot'),
+    url('../fonts/e-Ukraine_font/web/e-UkraineHead-Regular.woff') format('woff'),
+    url('../fonts/e-Ukraine_font/web/e-UkraineHead-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
     font-family: 'Roboto-light';
     src: url('../fonts/Roboto-Light.woff2') format('woff2'),
     url('../fonts/Roboto-Light.woff') format('woff');
@@ -111,13 +122,14 @@ p {
     font-family: 'Roboto', sans-serif;
 }
 a {
-    color: white;
+    color: maroon;
 }
 
 ul {
     margin-bottom: 0;
 }
 h2 {
+  padding-top: 30px !important;
     font-size: 42px;
     font-family: 'Roboto-Condensed', Arial, sans-serif;
 }
@@ -128,16 +140,163 @@ main {
     background: #7D0537;
 }
 
+
+/* Header */
+header {
+  width: 100%;
+}
+header > div.container > * {
+  display: inline-block;
+}
+header nav {
+  float: right;
+}
+header nav > ul {
+
+}
+header nav > ul > li {
+  display: inline-block;
+  text-transform: capitalize;
+  margin: 50px 5px 0;
+}
+header nav > ul > li > a {
+  padding: 5px;
+  text-decoration: none !important;
+  color: black !important;
+}
+a:focus {
+  border: 3px dotted maroon !important;
+}
+header nav > ul > li > a.register {
+  color: black !important;
+}
+
+main {
+    width: 100%;
+}
+
+/* INTRO */
+.intro {
+  width: 100% !important;
+  clear: both;
+  position: relative;
+  overflow: hidden;
+}
+.intro .decorator {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  margin-top: 16px;
+  height: calc(100% - 96px);
+  background-color: #7D0537;
+  z-index: 0;
+}
+#intro .container {
+  background-color: white;
+  position: relative;
+  z-index: 10;
+}
+#intro .left-side {
+}
+#intro img.title {
+  float: right;
+  max-width: 50%;
+}
+#intro img.logos {
+  position: absolute;
+  right: 60px;
+  top: 60px;
+  width: 500px;
+  border-radius: 10px;
+  box-shadow: 5px solid black;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+#intro p {
+  margin-top: 30px;
+}
+@media all and (max-width: 800px) {
+  #intro img.logos {
+    top: 20px;
+    right: 30px;
+    left: auto;
+    width: 300px;
+  }
+}
+@media all and (max-width: 600px) {
+  #intro img.logos {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    width: 200px;
+    border-radius: 10px;
+    box-shadow: 5px solid black;
+    border: 1px solid rgba(0,0,0,0.1);
+  }
+  #intro img.title {
+    float: none !important;
+  }
+}
+
+.intro-text {
+    font-size: 16px;
+    color: #333B50;
+    padding-top: 40px;
+    line-height: 1.6;
+    letter-spacing: 1px;
+}
+h1 {
+  text-align: left !important;
+  font-family: 'e-UkraineHead';
+  font-size: 30px !important;
+  display: inline-block;
+  width: 570px;
+  height: 90px;
+}
+h1 strong {
+  display: inline-block;
+  margin-bottom: 10px;
+  height: 57px;
+  font-variant: small-caps;
+  font-family: "Roboto-Condensed-Bold" !important;
+  font-weight: bold;
+  font-size: 38px;
+  color: #F15C08 !important;
+}
+.date, .place {
+  background-color: #F3F3F3;
+  display: inline-block;
+  text-align: center;
+  line-height: 54px;
+  font-weight: bold;
+}
+.date {
+  width: 150px;
+}
+.place {
+  width: 91px;
+  margin-left: 10px;
+}
+.register {
+  background-color: #FF8000;
+  width: 180px;
+  color: black !important;
+  display: inline-block;
+  text-align: center;
+  line-height: 54px;
+  font-weight: bold;
+}
+
 /*ABOUT*/
 .about {
+  clear: both;
     padding-top: 130px;
 }
 
-.left-side {
+.about .left-side {
     flex: 1 1;
     padding-right: 30px;
 }
-.right-side {
+.about .right-side {
     flex: 1 1;
     justify-content: flex-end;
 }
@@ -155,6 +314,17 @@ main {
     letter-spacing: 1px;
 }
 /*REGISTRATION*/
+.registration {
+  padding: 30px 20px 0 !important;
+}
+.registration a {
+  font-size: 50px;
+  line-height: 50px;
+  padding: 0 40px;
+  width: auto !important;
+  text-decoration: none !important;
+  border-radius: 10px;
+}
 /*FORM SECTION*/
 .registration {
     background: #F3F3F3;
@@ -209,9 +379,7 @@ main {
     width: 270px;
     height: 48px;
     font-size: 16px;
-    font-family: 'Roboto', Arial, sans-serif;
-    line-height: 1.4;
-    color: #696C73;
+    color: black;
     padding: 11px 0 11px 10px;
     border: none;
     border-bottom: 1px solid black;
@@ -220,9 +388,7 @@ main {
 
 .field-input::placeholder {
     font-size: 16px;
-    font-family: 'Roboto', Arial, sans-serif;
-    line-height: 1.4;
-    color: #696C73;
+    color: black;
 }
 
 
@@ -232,26 +398,22 @@ main {
     width: 100%;
     height: 144px;
     font-size: 16px;
+    color: black;
     padding: 11px 0 11px 10px;
     border: none;
     border-bottom: 1px solid black;
     outline: none;
-    font-family: 'Roboto', Arial, sans-serif;
-    line-height: 1.4;
-    color: #696C73;
 }
 
 .field-textarea::placeholder {
     font-size: 16px;
-    font-family: 'Roboto', Arial, sans-serif;
-    line-height: 1.4;
-    color: #696C73;
+    color: black;
 }
 .field button {
     margin-top: 30px;
     width: 215px;
     height: 52px;
-    background: #7D0537;
+    background: #00081E;
     color: white;
     font-size: 16px;
     font-weight: 700;
@@ -278,26 +440,19 @@ main {
 
 .news-content .created_at {
     color: #7D0537;
-    padding-bottom: 14px;
 }
 .news-content p {
     color: #333B50;
     font-size: 16px;
-    line-height: 1.6;
-    font-family: 'Roboto', Arial, sans-serif;
+    line-height: 26px;
 }
-
 
 
 /*PROGRAM*/
 
 .program{
     background: #7D0537;
-    padding: 0 10px 0 10px;
-}
-
-.title-padding {
-    padding-top: 80px;
+    padding: 0 10px 40px 10px;
 }
 
 .program__container {
@@ -346,6 +501,9 @@ main {
     min-height: 60px;
     margin-top: 20px;
 }
+.schedule:last-child {
+  padding-bottom: 40px;
+}
 .schedule__time {
     display: flex;
     padding-top: 20px;
@@ -364,8 +522,8 @@ main {
 
 .schedule__desc-representative {
     color: #7D0537;
-    font-size: 18px;
-    line-height: 1.5;
+    font-size: 16px;
+    line-height: 1.6;
 }
 
 .schedule-title {
@@ -425,6 +583,7 @@ main {
     width: 49%;
 }
 
+
 /*Speakers*/
 .speakers {
     padding-top: 80px;
@@ -450,7 +609,7 @@ main {
 /* ===== == = === 56.25em (900px) === = == ===== */
 @media all and (min-width: 56.25em) {
     .speakers-cards__item {
-        width: calc(100% / 12 * 4 );
+        width: calc(100% / 16 * 4 );
     }
 }
 
@@ -467,6 +626,7 @@ main {
     flex: 1 0;
     margin: 0;
     color: #18191C;
+;
 }
 
 .speakers-cards__img {
@@ -474,6 +634,9 @@ main {
     border-radius: 3px 3px 0 0;
 }
 
+.speakers-cards__img:hover {
+    opacity: 0.8;
+}
 .speakers-cards__title {
     padding-top: 20px;
 }
@@ -486,111 +649,11 @@ main {
 .speakers-social {
     padding-right: 20px;
 }
-.speakers-social img:hover {
-    color: red;
-}
 
-@media (max-width: 1100px) {
-    .about__content {
-        flex-direction: column-reverse;
-    }
-    .left-side {
-        text-align: center;
-    }
-    .right-side {
-        max-width: 80%;
-        margin-bottom: 60px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .registration-left {
-        display: flex;
-        justify-content: center;
-        padding-right: 0;
-        padding-top: 0;
-    }
-    .registration-right {
-        display: none;
-    }
-}
 
 @media (max-width: 600px) {
     .speakers-cards__item {
         padding-right: 0;
-    }
-    .schedule {
-        flex-direction: column;
-        width: 100%;
-    }
-    .schedule__time {
-        width: 100%;
-        margin-bottom: 6px;
-    }
-    .schedule__desc {
-        width: 100%;
-        margin-bottom: 30px;
-    }
-    .schedule__wrapper {
-        width: 100%;
-    }
-    .schedule-title {
-        margin-bottom: 6px;
-    }
-    .schedule__desc-text {
-        margin-bottom: 6px;
-    }
-    .tabpanel-li-blocked {
-        display: block;
-    }
-    .tabpanel-li {
-        font-size: 15px !important;
-    }
-    .left-side img {
-        max-width: 90%;
-    }
-    .field-group {
-        flex-direction: column;
-        padding-right: 0;
-        padding-top: 0;
-    }
-    .field:first-child {
-        padding-right: 0;
-    }
-
-    .feedback-input {
-        padding: 0;
-    }
-    .feedback-textarea {
-        padding: 0;
-    }
-}
-@media (max-width: 750px) {
-    /*News*/
-    .news-item {
-        flex-direction: column;
-    }
-    .news-img {
-        text-align: center;
-    }
-    .created_at {
-        text-align: center;
-    }
-    .news-content p {
-        text-align: center;
-    }
-    .section-title {
-        font-size: 32px;
-    }
-    .left-side {
-        padding-right: 0;
-    }
-    .field-group {
-        flex-direction: column;
-        padding-right: 0;
-        padding-top: 0;
-    }
-    .field-input {
-        width: 95vw;
     }
 }
 
@@ -600,8 +663,7 @@ main {
 }
 
 .feedback-field label {
-    font-size: 14px;
-    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 12px;
     width: 100%;
     padding-top: 21px;
 }
@@ -657,6 +719,17 @@ main {
     width: 100vw;
     height: 380px;
     background: #DCE2F0;
+}
+
+#biglogoss .container {
+  text-align: center;
+}
+#biglogos {
+  text-align: center;
+  display: inline-block;
+  text-align: center;
+  max-width: 60%;
+  padding: 30px;
 }
 
 /*
